--- a/feature-libs/asm/styles/components/_asm-customer-360.component.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-360.component.scss
@@ -1,12 +1,8 @@
 %cx-asm-customer-360 {
   height: 100%;
-
-  .cx-asm-customer-360 {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  .cx-modal-content {
+    overflow-y: hidden;
   }
-
   .cx-dialog-header {
     flex-direction: column;
     padding: 2rem;
@@ -108,6 +104,7 @@
       min-height: 0;
       overflow-y: auto;
       padding: 0 0 28px;
+      max-height: 60vh;
     }
     .active {
       color: $asmVisualFocusColor;
