Task/asm 360 component wrapper (#16312)
* WIP: Refactoring section components by wrapping them around another component so we can manipulate their providers so they can get the data they need

* Separating OCC-specific implementation of Customer 360 by 1) not specifying request nor response data types 2) using replaceable services to handle transforming requests and responses. Creating Asm360Service facade

* prettier fix

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -58,21 +58,11 @@
           <ng-container
             *ngFor="let config of currentTab?.components; let i = index"
           >
-            <ng-container
-              [cxComponentWrapper]="{
-                flexType: config.component,
-                typeCode: config.component,
-                uid: ''
-              }"
-            ></ng-container>
-            <!--
-            <ng-container
-              *ngComponentOutlet="
-                config.component;
-                injector: injectors[activeTab][i]
-              "
-            ></ng-container>
-            -->
+            <cx-asm-customer-section
+              [component]="config.component"
+              [config]="config.config"
+              [data]="data[activeTab][i]"
+            ></cx-asm-customer-section>
           </ng-container>
         </div>
       </div>
