--- a/feature-libs/asm/styles/_asm-variables.scss
+++ b/feature-libs/asm/styles/_asm-variables.scss
@@ -3,3 +3,6 @@ $asmVisualFocusColor: #0070f2;
 $asmMainTextColor: #14293a;
 $asmMainSecondaryTextColor: #747881;
 $asmTabTextColor: #333333;
+$asmBorderColor: #d3d6db;
+$asmTableBackgroundAltColor: #ebf8ff;
+$asmTableTextColor: #1d2d3e;
