Task/asm 360 navigate event (#16317)
* Destroying subscriptions for Asm 360 section components

* Using the SectionContext to pass navigate events upward to the Customer 360 component so the modal can be closed properly

* yarn prettier:fix

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -62,6 +62,7 @@
               [component]="config.component"
               [config]="config.config"
               [data]="data[activeTab][i]"
+              (navigate)="navigateTo($event)"
             ></cx-asm-customer-section>
           </ng-container>
         </div>
