--- a/feature-libs/asm/components/asm-customer-360/sections/asm-customer-overview/asm-customer-overview.component.html
+++ b/feature-libs/asm/components/asm-customer-360/sections/asm-customer-overview/asm-customer-overview.component.html
@@ -13,7 +13,7 @@
         "
         role="link"
         class="cx-overview-title-link"
-        (click)="navigateTo('cart')"
+        (click)="navigateTo({cxRoute: 'cart' })"
       >
         {{ activeCart.code }}
       </a>
@@ -48,7 +48,7 @@
             [product]="entry.product"
             [price]="entry.basePrice"
             [quantity]="entry.quantity"
-            (selectProduct)="navigateTo('product', $event)"
+            (selectProduct)="navigateTo({cxRoute: 'product',  params: $event })"
           ></cx-asm-product-item>
         </ng-container>
       </div>
@@ -82,7 +82,8 @@
         "
         role="link"
         class="cx-overview-title-link"
-        (click)="navigateTo('saved-carts')"
+        (click)="navigateTo({cxRoute: 'savedCartsDetails', params: { savedCartId: savedCart?.code } })"
+
       >
         {{ savedCart.code }}
       </a>
@@ -117,7 +118,7 @@
             [product]="entry.product"
             [price]="entry.basePrice"
             [quantity]="entry.quantity"
-            (selectProduct)="navigateTo('product', $event)"
+            (selectProduct)="navigateTo({cxRoute: 'product',  params: $event })"
           ></cx-asm-product-item>
         </ng-container>
       </div>
@@ -148,7 +149,7 @@
         [attr.aria-label]="'asm.customer360.overview.interests' | cxTranslate"
         role="link"
         class="cx-overview-title-link"
-        (click)="navigateTo('myInterests')"
+        (click)="navigateTo({cxRoute: 'myInterests' })"
       >
         {{ 'asm.customer360.overview.interests' | cxTranslate }}
       </a>
@@ -169,7 +170,7 @@
               *ngIf="i < numberofColumns * 2 || showMoreInterests"
               [product]="product"
               [isOrderEntry]="false"
-              (selectProduct)="navigateTo('product', $event)"
+              (selectProduct)="navigateTo({cxRoute: 'product',  params: $event })"
             ></cx-asm-product-item>
           </ng-container>
         </ng-container>
