Task/asm 360 data query (#16356)
* Implementing ASM 360 http request using SPA queries. Moving former OCC-only models to root, as it is more convenient to use those models. Rewriting code to support this.

* ASM module can be built now

* Fixing logic of Maps section and modifying some of the HTML to match the new screens

* SCSS file for Map section is in right location, SCSS changes for Map section and translating pagination text

* Unit tests for Map Sections. Prettier lint fix. Leaving comment on Storefinder service as the method signature looks wrong

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -61,7 +61,7 @@
             <cx-asm-customer-section
               [component]="config.component"
               [config]="config.config"
-              [data]="data[activeTab][i]"
+              [data]="(customer360Tab$ | async)?.[i]"
               (navigate)="navigateTo($event)"
             ></cx-asm-customer-section>
           </ng-container>
