--- a/feature-libs/asm/components/asm-customer-360/sections/asm-customer-product-reviews/asm-customer-product-reviews.component.html
+++ b/feature-libs/asm/components/asm-customer-360/sections/asm-customer-product-reviews/asm-customer-product-reviews.component.html
@@ -4,5 +4,5 @@
   sortProperty="dateAndStatus"
   [columns]="reviewColumns"
   [entries]="reviewEntries"
-  [pageSize]="(context.config$ | async).pageSize"
+  [pageSize]="(context.config$ | async)?.pageSize"
 ></cx-asm-customer-table>
