update activity tab with new sort (#16374)
* update activity tab with new sort

* code review changes

* code review change for sectionContext config

* update for code review...

Co-authored-by: Hakwoo Kim <hakwoo.kim@sap.com>

--- a/feature-libs/asm/components/asm-customer-360/sections/asm-customer-activity/asm-customer-activity.component.html
+++ b/feature-libs/asm/components/asm-customer-360/sections/asm-customer-activity/asm-customer-activity.component.html
@@ -1,8 +1,9 @@
 <cx-asm-customer-table
-  emptyStateText="There is currently no recorded customer activity"
-  headerText="General"
-  sortProperty="updated"
+  [emptyStateText]="'asm.customer360.activity.emptyStateText' | cxTranslate"
+  [headerText]="'asm.customer360.activity.headerText' | cxTranslate"
+  sortProperty="created"
   [columns]="columns"
-  [entries]="transformedEntries"
-  [pageSize]="config.pageSize"
+  [entries]="entries$ | async"
+  [pageSize]="pageSize"
+  (selectItem)="itemSelected($event)"
 ></cx-asm-customer-table>
