--- a/feature-libs/asm/styles/components/_asm-customer-table.component.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-table.component.scss
@@ -1,41 +1,39 @@
 %cx-asm-customer-table {
   display: block;
-  padding: 0 28px;
+  padding: 0 18px;
 
-  .table {
+  .cx-asm-customer-table {
     width: 100%;
     border-collapse: collapse;
     table-layout: fixed;
-    margin-top: 14px;
+    margin-top: 5px;
 
     &-heading {
       width: 100%;
-      font-size: 16px;
+      font-size: 0.875rem;
       justify-content: space-between;
       display: flex;
-      color: #19212b;
 
       &-text {
-        padding-top: 30px;
-        padding-bottom: 7px;
-        text-transform: uppercase;
+        font-size: 1.125rem;
+        font-weight: var(--cx-font-weight-semi);
+        padding: 28px 0 32px 30px;
       }
 
       &-pages {
         display: flex;
-        font-size: 14px;
+        font-size: 0.875rem;
         align-self: flex-end;
       }
 
       &-page {
-        color: #0486e0;
+        color: $asmLinkColor;
         cursor: pointer;
-        padding-left: 14px;
-        padding-right: 14px;
+        padding: 0 14px;
         font-weight: bold;
 
         &.active {
-          color: #7f90a4;
+          color: $asmLinkColor;
           cursor: default;
         }
       }
@@ -43,7 +41,7 @@
 
     &-separator {
       border: none;
-      border-bottom: 1px solid #d4d7dc;
+      border-bottom: 1px solid $asmBorderColor;
       margin: 0;
     }
 
@@ -53,67 +51,71 @@
 
     &-row {
       border: none;
-      border-top: 1px solid #e5e5e5;
+      border-top: 1px solid $asmBorderColor;
 
       &-header {
         border: none;
       }
 
       &:nth-child(2n + 2) {
-        background: #eef3f7;
+        background: $asmTableBackgroundAltColor;
       }
     }
-
     th,
     td {
       text-align: left;
       vertical-align: top;
-      padding: 10px;
+      padding: 19px 10px;
+    }
+    th:first-child,
+    td:first-child {
+      padding-inline-start: 24px;
     }
 
     td {
-      color: #313440;
+      color: $asmMainTextColor;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      font-size: 15px;
-
+      font-size: 1rem;
+      font-weight: var(--cx-font-weight-normal);
       a {
         font-weight: bold;
-        color: #0486e0;
+        color: $asmLinkColor;
         text-decoration: none;
+        cursor: pointer;
       }
     }
 
     th {
-      font-size: 13px;
-      color: #7f90a4;
+      font-size: 1rem;
+      font-weight: var(--cx-font-weight-semi);
+      color: $asmMainTextColor;
       cursor: pointer;
-      text-transform: uppercase;
       user-select: none;
 
       &:hover,
       &.active {
-        color: #454a5d;
+        color: $asmLinkColor;
       }
 
       &.active {
         &.desc::after,
         &.asc::after {
           content: '';
-          margin-left: 8px;
+          margin-inline-start: 8px;
           border-left: 5px solid transparent;
           border-right: 5px solid transparent;
           position: relative;
         }
 
-        &.asc::after {
-          border-bottom: 5px solid #7f90a4;
+        &.desc::after {
+          border-bottom: 5px solid $asmLinkColor;
           bottom: 11px;
         }
 
-        &.desc::after {
-          border-top: 5px solid #7f90a4;
+        &.asc::after {
+          border-top: 5px solid $asmLinkColor;
           top: 13px;
         }
       }
