--- a/feature-libs/asm/components/asm-customer-360/asm-customer-ui-components/asm-customer-table/asm-customer-table.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-ui-components/asm-customer-table/asm-customer-table.component.html
@@ -1,60 +1,90 @@
-<div class="table-heading" *ngIf="headerText">
-  <div class="table-heading-text">
+<div class="cx-asm-customer-table-heading" *ngIf="headerText">
+  <div class="cx-asm-customer-table-heading-text">
     {{ headerText }}
   </div>
-  <div class="table-heading-pages" *ngIf="entryPages">
+  <div class="cx-asm-customer-table-heading-pages" *ngIf="entryPages">
     <ng-container *ngFor="let page of entryPages; let pageNumber = index">
       <div
         *ngIf="entryPages.length > 1"
         (click)="setPageNumber(pageNumber)"
-        class="table-heading-page"
-        [class.active]="currentPage === pageNumber"
+        class="cx-asm-customer-table-heading-page"
+        [class.active]="currentPageNumber === pageNumber"
       >
         {{ pageNumber + 1 }}
       </div>
     </ng-container>
   </div>
 </div>
-<hr class="table-separator" />
+<hr class="cx-asm-customer-table-separator" />
 <ng-container *ngIf="entryPages?.length && columns?.length">
-  <table class="table">
-    <tr class="table-row-header">
-      <th
-        *ngFor="let column of columns"
-        (click)="sortEntriesAndUpdatePages(column.property)"
-        [class.active]="sortProperty === column.property"
-        [class.asc]="reverseSort"
-        [class.desc]="!reverseSort"
+  <table class="cx-asm-customer-table" role="table">
+    <caption class="cx-visually-hidden">
+      {{
+        headerText
+      }}
+    </caption>
+    <thead>
+      <tr class="cx-asm-customer-table-row-header" role="row">
+        <th
+          class="cx-asm-customer-table-header"
+          role="columnheader"
+          *ngFor="let column of columns"
+          (click)="sortEntriesAndUpdatePages(column.property)"
+          [class.active]="sortProperty === column.property"
+          [class.asc]="sortOrder === SortOrder.ASC"
+          [class.desc]="sortOrder !== SortOrder.ASC"
+        >
+          <span *ngIf="column?.i18nTextKey">{{
+            column.i18nTextKey | cxTranslate
+          }}</span>
+          <span *ngIf="!column?.i18nTextKey">{{ column.text }}</span>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        class="cx-asm-customer-table-row"
+        role="row"
+        *ngFor="let entry of currentPage$ | async"
       >
-        {{ column.text }}
-      </th>
-    </tr>
-    <tr class="table-row" *ngFor="let entry of entryPages?.[currentPage]">
-      <td *ngFor="let column of columns">
-        <ng-container
-          *ngIf="column.urlProperty; then linkTemplate; else starRating"
-        ></ng-container>
+        <td role="cell" *ngFor="let column of columns">
+          <ng-container
+            *ngIf="column.navigatable; then linkTemplate; else starRating"
+          ></ng-container>
 
-        <ng-template #linkTemplate>
-          <a [href]="entry[column.urlProperty]">{{
-            entry[column.property].text || '---'
-          }}</a>
-        </ng-template>
+          <ng-template #linkTemplate>
+            <a
+              tabindex="0"
+              [attr.aria-label]="entry[column.property]"
+              role="link"
+              (click)="selectItem.emit(entry)"
+              class="cx-asm-customer-table-link"
+              >{{ entry[column.property] || '---' }}</a
+            >
+          </ng-template>
 
-        <ng-template #starRating>
-          <cx-star-rating
-            *ngIf="column.renderAsStarRating; else tableCell"
-            [rating]="entry[column.property]"
-          ></cx-star-rating>
-        </ng-template>
+          <ng-template #starRating>
+            <cx-star-rating
+              *ngIf="column.renderAsStarRating; else dateCell"
+              [rating]="entry[column.property]"
+            ></cx-star-rating>
+          </ng-template>
 
-        <ng-template #tableCell>
-          <ng-container>{{ entry[column.property] || '---' }}</ng-container>
-        </ng-template>
-      </td>
-    </tr>
+          <ng-template #dateCell>
+            <ng-container
+              *ngIf="column?.isDate && entry[column.property]; else tableCell"
+              >{{ entry[column.property] | cxDate: 'medium' }}</ng-container
+            >
+          </ng-template>
+
+          <ng-template #tableCell>
+            <ng-container>{{ entry[column.property] || '---' }}</ng-container>
+          </ng-template>
+        </td>
+      </tr>
+    </tbody>
   </table>
 </ng-container>
-<div class="table-empty" *ngIf="!entryPages?.length">
+<div class="cx-asm-customer-table-empty" *ngIf="!entryPages?.length">
   {{ emptyStateText }}
 </div>
