--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -4,70 +4,58 @@
 >
   <!-- Modal Header -->
   <div class="cx-modal-content">
-    <ng-container>
-      <div class="cx-dialog-header modal-header">
-        <div class="header-title">
-          <h3 id="asm-customer-360-title" class="modal-title">
-            {{ 'asm.customer360.header.title' | cxTranslate }}
-          </h3>
-          <div id="asm-customer-360-desc" class="cx-visually-hidden">
-            {{ 'asm.customer360.header.title' | cxTranslate }}
-          </div>
-          <ng-template *ngTemplateOutlet="closeButton"></ng-template>
+    <div class="cx-dialog-header modal-header">
+      <div class="header-title">
+        <h3 id="asm-customer-360-title" class="modal-title">
+          {{ 'asm.customer360.header.title' | cxTranslate }}
+        </h3>
+        <div id="asm-customer-360-desc" class="cx-visually-hidden">
+          {{ 'asm.customer360.header.title' | cxTranslate }}
         </div>
-        <div class="header-content">
-          <div class="header-content-container">
-            <div class="cx-customer-info-container">
-              <div class="cx-avatar">
-                {{ getAvatar() }}
-              </div>
-              <div class="cx-customer-info ml-3">
-                <div class="cx-customer-name">
-                  {{
-                    'asm.customer360.header.subTitle'
-                      | cxTranslate: { name: customer.firstName }
-                  }}
-                </div>
-                <div class="cx-customer-email">
-                  {{ customer.uid }}
-                </div>
-              </div>
-            </div>
-            <div class="login-info">Signed up 35 minutes ago 06-04-2007</div>
+        <ng-template *ngTemplateOutlet="closeButton"></ng-template>
+      </div>
+      <div class="header-content">
+        <div class="cx-avatar">
+          {{ getAvatar() }}
+        </div>
+        <div class="cx-customer-info ml-3">
+          <div class="cx-customer-name">
+            {{
+              'asm.customer360.header.subTitle'
+                | cxTranslate: { name: customer.firstName }
+            }}
+          </div>
+          <div class="cx-customer-email">
+            {{ customer.uid }}
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- Modal Body -->
-      <div class="cx-dialog-body">
-        <div class="cx-dialog-row">
-          <div class="cx-dialog-item">
-            <div class="cx-tab-container">
-              <a
-                class="cx-tab"
-                *ngFor="let tab of tabs; let i = index"
-                (click)="selectTab(i)"
-                [class.active]="activeTab === i"
-              >
-                {{ tab.i18nNameKey | cxTranslate }}
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="cx-tab-content modal-body">
-          <ng-container
-            *ngFor="let config of currentTab?.components; let i = index"
-          >
-            <cx-asm-customer-section
-              [component]="config.component"
-              [config]="config.config"
-              [data]="(customer360Tab$ | async)?.[i]"
-              (navigate)="navigateTo($event)"
-            ></cx-asm-customer-section>
-          </ng-container>
-        </div>
+    <!-- Modal Body -->
+    <div class="cx-dialog-body">
+      <div class="cx-tab-container">
+        <a
+          class="cx-tab"
+          *ngFor="let tab of tabs; let i = index"
+          (click)="selectTab(i)"
+          [class.active]="activeTab === i"
+        >
+          {{ tab.i18nNameKey | cxTranslate }}
+        </a>
       </div>
-    </ng-container>
+      <div class="cx-tab-content modal-body">
+        <ng-container *ngIf="customer360Tabs$ | async as customer360Tabs">
+          <cx-asm-customer-section
+            *ngFor="let config of currentTab?.components; let i = index"
+            [component]="config.component"
+            [config]="config.config"
+            [data]="customer360Tabs?.[i]"
+            (navigate)="navigateTo($event)"
+          ></cx-asm-customer-section>
+        </ng-container>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -78,8 +66,6 @@
     attr.aria-label="{{ 'common.close' | cxTranslate }}"
     (click)="closeModal('Cross click')"
   >
-    <span>
-      <cx-icon [type]="iconTypes.CLOSE"></cx-icon>
-    </span>
+    <cx-icon [type]="closeIcon"></cx-icon>
   </button>
 </ng-template>
